fix layout on mobile

--- a/app/javascript/styles/mastodon/admin.scss
+++ b/app/javascript/styles/mastodon/admin.scss
@@ -463,6 +463,18 @@ $content-width: 840px;
       background-color: var(--color-bg-brand-soft);
     }
 
+    .content {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      flex-grow: 1;
+      padding: 0;
+
+      @media screen and (width >= 630px) {
+        flex-direction: row;
+      }
+    }
+
     .body {
       flex-grow: 1;
     }
